--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -168,6 +168,12 @@ async function sairDaConta() {
                 <p>Clientes,Fornecedores,colaboradores etc...</p>
             </a>
 
+             <a href="finaceiro.html" class="card">
+                <i class="fas fa-users"></i>
+                <h3>Financerio</h3>
+                <p>fluxo de caixa</p>
+            </a>
+
             <div class="card card-logout" onclick="sairDaConta()">
                 <i class="fas fa-sign-out-alt"></i>
                 <h3>Sair</h3>
