--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -168,7 +168,7 @@ async function sairDaConta() {
                 <p>Clientes,Fornecedores,colaboradores etc...</p>
             </a>
 
-             <a href="finaceiro.html" class="card">
+             <a href="financeiro.html" class="card">
                 <i class="fas fa-users"></i>
                 <h3>Financerio</h3>
                 <p>fluxo de caixa</p>
