--- a/projeto/erp/financeiro.html
+++ b/projeto/erp/financeiro.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <link rel="stylesheet" href="css/financeiro.css">
+    <link rel="stylesheet" href="css/financerio.css">
     <script src="js/financeiro.js" defer></script>
 </head>
 <body>
