--- a/projeto/erp/produtos.html
+++ b/projeto/erp/produtos.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <link rel="stylesheet" href="style.css"> <script src="produtos.js" defer></script>
+    <link rel="stylesheet" href="css/produtos.css"> <script src="js/produtos.js" defer></script>
 </head>
 <body>
 
