--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -161,6 +161,12 @@ async function sairDaConta() {
                 <h3>Bloco de Notas</h3>
                 <p>Anote e organize suas ideias na nuvem.</p>
             </a>
+            
+             <a href="produtos.html" class="card">
+                <i class="fas fa-sticky-note"></i>
+                <h3>Produtos</h3>
+                <p>Anote e organize suas ideias na nuvem.</p>
+            </a>
 
             <a href="entidades.html" class="card">
                 <i class="fas fa-users"></i>
