--- a/projeto/erp/produtos.html
+++ b/projeto/erp/produtos.html
@@ -8,7 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <link rel="stylesheet" href="css/produtos.css"> <script src="js/produtos.js" defer></script>
+    <link rel="stylesheet" href="css/produtos.css"> 
+    <script src="js/produtos.js" defer></script>
 </head>
 <body>
 
@@ -28,26 +29,61 @@
         
         <div class="section-title">Informações Básicas</div>
         <div class="form-grid">
-            <div style="grid-column: span 2;"><label>Nome do Produto *</label><input type="text" id="nome"></div>
-            <div><label>Código/SKU</label><input type="text" id="sku"></div>
-            <div><label>Categoria</label><input type="text" id="categoria_prod"></div>
+            <div style="grid-column: span 2;">
+                <label>Nome do Produto *</label>
+                <input type="text" id="nome" placeholder="Ex: Cimento CP-II">
+            </div>
+            <div>
+                <label>Código de Barras (EAN)</label>
+                <input type="text" id="codigo_de_barras" placeholder="Gere ou escaneie...">
+            </div>
+            <div>
+                <label>Marca</label>
+                <input type="text" id="marca" placeholder="Marca do fabricante">
+            </div>
+            <div>
+                <label>SKU / Código Interno</label>
+                <input type="text" id="sku" placeholder="Ex: PROD-001">
+            </div>
+            <div>
+                <label>Categoria</label>
+                <input type="text" id="categoria_prod" placeholder="Ex: Materiais">
+            </div>
+            <div>
+                <label>Entidade (Fornecedor)</label>
+                <select id="entidade_id">
+                    <option value="">Selecione...</option>
+                </select>
+            </div>
+            <div>
+                <label>Data de Vencimento</label>
+                <input type="date" id="data_vencimento">
+            </div>
+        </div>
+
+        <div class="section-title">Descrição e Detalhes</div>
+        <div style="margin-bottom: 20px;">
+            <textarea id="descricao" rows="3" style="width: 100%; padding: 10px; border-radius: 8px; border: 1px solid #e2e8f0; font-family: inherit;" placeholder="Informações adicionais do produto..."></textarea>
         </div>
 
         <div class="section-title">Preços e Estoque</div>
         <div class="form-grid">
-            <div><label>Preço de Custo (R$)</label><input type="number" id="preco_custo" step="0.01"></div>
-            <div><label>Preço de Venda (R$) *</label><input type="number" id="preco_venda" step="0.01"></div>
+            <div><label>Preço de Custo (R$)</label><input type="number" id="preco_custo" step="0.01" value="0.00"></div>
+            <div><label>Preço de Venda (R$) *</label><input type="number" id="preco_venda" step="0.01" value="0.00"></div>
             <div><label>Estoque Atual *</label><input type="number" id="estoque_atual" value="0"></div>
             <div><label>Estoque Mínimo</label><input type="number" id="estoque_minimo" value="5"></div>
         </div>
 
         <button class="btn-add" id="btn-save" onclick="handleSaveProduto()">Salvar Produto</button>
-        <button class="btn-cancel" id="btn-cancel" onclick="resetForm()">Cancelar Edição</button>
+        <button class="btn-cancel" id="btn-cancel" onclick="resetForm()" style="display:none; background:#94a3b8; color:white; border:none; padding:10px; width:100%; border-radius:8px; margin-top:10px; cursor:pointer;">Cancelar Edição</button>
     </div>
 
     <div class="card">
         <div class="form-grid">
-            <div style="grid-column: span 3;"><label>Buscar Produto</label><input type="text" id="inputBusca" onkeyup="filtrarProdutos()" placeholder="Nome, SKU ou categoria..."></div>
+            <div style="grid-column: span 3;">
+                <label>Busca Inteligente</label>
+                <input type="text" id="inputBusca" onkeyup="filtrarProdutos()" placeholder="Buscar por Nome, SKU, Código de Barras ou Marca...">
+            </div>
         </div>
     </div>
 
@@ -55,17 +91,18 @@
         <table>
             <thead>
                 <tr>
-                    <th>SKU</th>
-                    <th>Nome</th>
+                    <th>Código/SKU</th>
+                    <th>Produto / Marca</th>
                     <th>Categoria</th>
                     <th>Custo</th>
                     <th>Venda</th>
                     <th>Estoque</th>
-                    <th>Status</th>
+                    <th>Vencimento</th>
                     <th>Ações</th>
                 </tr>
             </thead>
-            <tbody id="produtos-list"></tbody>
+            <tbody id="produtos-list">
+                </tbody>
         </table>
     </div>
 </div>
