--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -180,6 +180,12 @@ async function sairDaConta() {
                 <p>fluxo de caixa</p>
             </a>
 
+            <a href="pdv.html" class="card">
+                <i class="fas fa-users"></i>
+                <h3>PDV</h3>
+                <p>caixa</p>
+            </a>
+
             <div class="card card-logout" onclick="sairDaConta()">
                 <i class="fas fa-sign-out-alt"></i>
                 <h3>Sair</h3>
