--- a/projeto/erp/pdv.html
+++ b/projeto/erp/pdv.html
@@ -10,14 +10,7 @@
 </head>
 <body>
 
-<div class="navbar">
-    <div style="font-weight: bold;">ERP ABP - PDV (VENDAS)</div>
-    <div>
-        <a href="index.html" class="nav-link">Início</a>
-        <a href="produtos.html" class="nav-link">Estoque</a>
-        <button onclick="sairDaConta()" class="btn-exit">Sair</button>
-    </div>
-</div>
+
 
 <div class="container" style="display: grid; grid-template-columns: 1fr 400px; gap: 20px;">
     
@@ -78,6 +71,6 @@
         </button>
     </div>
 </div>
-
+<script src="js/navbar.js"></script>
 </body>
 </html>
