--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -186,6 +186,12 @@ async function sairDaConta() {
                 <p>caixa</p>
             </a>
 
+            a href="adm_pdv.html" class="card">
+                <i class="fas fa-users"></i>
+                <h3>ADM-PDV</h3>
+                <p>Crotrole-caixas</p>
+            </a>
+
             <div class="card card-logout" onclick="sairDaConta()">
                 <i class="fas fa-sign-out-alt"></i>
                 <h3>Sair</h3>
