Update and rename adm_pdv.html to pdv_adm.html

--- a/projeto/erp/pdv_adm.html
+++ b/projeto/erp/pdv_adm.html
@@ -55,7 +55,7 @@
     </div>
 </div>
 
-<script src="js/adm_caixas.js" defer></script>
+<script src="js/pdv_adm.js" defer></script>
 <script src="js/navbar.js"></script>
 </body>
 </html>
