--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -186,9 +186,9 @@ async function sairDaConta() {
                 <p>caixa</p>
             </a>
 
-            a href="adm_pdv.html" class="card">
+            <a href="pdv_adm.html" class="card">
                 <i class="fas fa-users"></i>
-                <h3>ADM-PDV</h3>
+                <h3>PDV-ADM-CONTROLER</h3>
                 <p>Crotrole-caixas</p>
             </a>
 
