--- a/projeto/erp/pdv_adm.html
+++ b/projeto/erp/pdv_adm.html
@@ -37,7 +37,26 @@
 
     <div class="card">
         <h3><i class="fas fa-history"></i> Últimas Vendas Realizadas</h3>
+
+        <div class="card" style="margin-bottom: 20px; display: flex; gap: 15px; align-items: flex-end; flex-wrap: wrap;">
+    <div>
+        <label style="display:block; font-size: 12px; color: #64748b;">Data Início</label>
+        <input type="date" id="data-inicio" class="form-control" style="padding: 8px;">
+    </div>
+    <div>
+        <label style="display:block; font-size: 12px; color: #64748b;">Data Fim</label>
+        <input type="date" id="data-fim" class="form-control" style="padding: 8px;">
+    </div>
+    <button onclick="carregarDadosAdm()" class="btn-add" style="padding: 10px 20px; height: 40px;">
+        <i class="fas fa-filter"></i> FILTRAR
+    </button>
+    <button onclick="definirMesPassado()" class="btn-nav" style="background: #64748b; height: 40px;">
+        Mês Passado
+    </button>
+</div>
+        
         <div class="table-container">
+            
             <table>
                 <thead>
                     <tr>
