--- a/projeto/erp/pdv.html
+++ b/projeto/erp/pdv.html
@@ -91,7 +91,7 @@
         </button>
     </div>
 </div>
-
+<div id="cupom-impressao" style="display: none;"></div>
 <script src="js/pdv.js" defer></script>
 <script src="js/navbar.js"></script>
 </body>
