--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -7,66 +7,69 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --primary: #3ecf8e; --dark: #1e293b; --bg: #f1f5f9; }
-        body { font-family: 'Inter', sans-serif; background: var(--bg); margin: 0; }
+        :root { --primary: #3ecf8e; --dark: #1e293b; --light: #f8fafc; }
+        body { font-family: 'Inter', sans-serif; margin: 0; background: #f1f5f9; color: var(--dark); }
         
-        header { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.05); position: sticky; top: 0; z-index: 1000; }
-        .logo { color: var(--primary); font-weight: 800; font-size: 1.5rem; text-decoration: none; }
-        
-        .cart-icon { position: relative; cursor: pointer; font-size: 1.4rem; color: var(--dark); }
-        #cart-count { position: absolute; top: -8px; right: -10px; background: #ef4444; color: white; font-size: 0.7rem; padding: 2px 6px; border-radius: 50%; }
+        /* Header */
+        header { background: white; padding: 20px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .logo { font-size: 1.5rem; font-weight: 800; color: var(--primary); text-decoration: none; }
+        .cart-btn { position: relative; font-size: 1.2rem; cursor: pointer; background: none; border: none; }
+        #cart-count { position: absolute; top: -10px; right: -10px; background: red; color: white; font-size: 0.7rem; padding: 2px 6px; border-radius: 50%; }
 
-        .categories-bar { display: flex; gap: 10px; padding: 20px 5%; overflow-x: auto; scrollbar-width: none; }
-        .cat-item { background: white; padding: 8px 20px; border-radius: 20px; cursor: pointer; border: 1px solid #e2e8f0; white-space: nowrap; transition: 0.3s; }
-        .cat-item.active { background: var(--primary); color: white; border-color: var(--primary); }
+        /* Categorias */
+        .categories { display: flex; justify-content: center; gap: 15px; padding: 20px; overflow-x: auto; }
+        .cat-btn { background: white; border: 1px solid #ddd; padding: 8px 20px; border-radius: 20px; cursor: pointer; white-space: nowrap; transition: 0.3s; }
+        .cat-btn.active { background: var(--primary); color: white; border-color: var(--primary); }
 
-        .products-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); gap: 20px; padding: 0 5% 40px; }
-        .card { background: white; border-radius: 12px; padding: 15px; text-align: center; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1); transition: 0.3s; }
-        .card:hover { transform: translateY(-5px); }
-        .card img { width: 100%; height: 150px; object-fit: contain; background: #f8fafc; border-radius: 8px; margin-bottom: 10px; }
-        .card h3 { font-size: 1rem; margin: 10px 0; color: var(--dark); height: 40px; overflow: hidden; }
-        .price { font-size: 1.2rem; font-weight: 800; color: var(--primary); display: block; margin-bottom: 15px; }
-        .btn-add { background: var(--primary); color: white; border: none; width: 100%; padding: 10px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        /* Vitrine */
+        .products-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 25px; padding: 20px 5%; }
+        .product-card { background: white; border-radius: 12px; padding: 15px; transition: 0.3s; box-shadow: 0 4px 6px rgba(0,0,0,0.05); text-align: center; }
+        .product-card:hover { transform: translateY(-5px); box-shadow: 0 10px 15px rgba(0,0,0,0.1); }
+        .product-img { width: 100%; height: 200px; background: #eee; border-radius: 8px; display: flex; align-items: center; justify-content: center; margin-bottom: 15px; }
+        .product-name { font-weight: bold; margin-bottom: 10px; display: block; height: 40px; }
+        .product-price { color: var(--primary); font-size: 1.3rem; font-weight: 800; display: block; margin-bottom: 15px; }
+        .add-to-cart { width: 100%; background: var(--primary); color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; font-weight: bold; }
 
-        /* Modal do Carrinho */
-        #cart-sidebar { position: fixed; right: -400px; top: 0; width: 350px; height: 100%; background: white; box-shadow: -5px 0 15px rgba(0,0,0,0.1); transition: 0.4s; z-index: 1100; display: flex; flex-direction: column; }
-        #cart-sidebar.active { right: 0; }
-        .cart-body { flex: 1; overflow-y: auto; padding: 20px; }
-        .cart-item-row { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 1px solid #f1f5f9; padding-bottom: 10px; }
+        /* Modal Carrinho */
+        #cart-modal { position: fixed; right: -400px; top: 0; width: 350px; height: 100%; background: white; z-index: 1000; box-shadow: -5px 0 15px rgba(0,0,0,0.2); transition: 0.4s; display: flex; flex-direction: column; }
+        #cart-modal.open { right: 0; }
+        .cart-header { padding: 20px; border-bottom: 1px solid #eee; display: flex; justify-content: space-between; align-items: center; }
+        .cart-items { flex: 1; overflow-y: auto; padding: 20px; }
+        .cart-footer { padding: 20px; border-top: 1px solid #eee; }
     </style>
 </head>
 <body>
 
 <header>
     <a href="#" class="logo">SUPERMERCADO ABP</a>
-    <div class="cart-icon" onclick="toggleCart()">
-        <i class="fas fa-shopping-cart"></i>
+    <button class="cart-btn" onclick="toggleCart()">
+        <i class="fas fa-shopping-basket"></i>
         <span id="cart-count">0</span>
-    </div>
+    </button>
 </header>
 
-<div class="categories-bar" id="category-container">
-    <div class="cat-item active" onclick="filterCategory('todos')">Todos</div>
-</div>
+<nav class="categories" id="category-list">
+    <button class="cat-btn active" onclick="filterCategory('todos')">Todos</button>
+</nav>
 
-<div class="products-grid" id="product-container">
-    </div>
+<main class="products-grid" id="product-list">
+    </main>
 
-<div id="cart-sidebar">
-    <div style="padding:20px; border-bottom:1px solid #eee; display:flex; justify-content:space-between;">
-        <h2 style="margin:0">Carrinho</h2>
-        <button onclick="toggleCart()" style="background:none; border:none; font-size:1.5rem; cursor:pointer;">&times;</button>
+<div id="cart-modal">
+    <div class="cart-header">
+        <h3>Meu Carrinho</h3>
+        <button onclick="toggleCart()" style="border:none; background:none; font-size:1.5rem;">&times;</button>
     </div>
-    <div class="cart-body" id="cart-items"></div>
-    <div style="padding:20px; border-top:1px solid #eee;">
-        <div style="display:flex; justify-content:space-between; font-weight:bold; font-size:1.2rem; margin-bottom:15px;">
+    <div class="cart-items" id="cart-items-list"></div>
+    <div class="cart-footer">
+        <div style="display:flex; justify-content:space-between; margin-bottom:15px; font-weight:bold;">
             <span>Total:</span>
             <span id="cart-total">R$ 0,00</span>
         </div>
-        <button class="btn-add" style="padding:15px;" onclick="checkout()">FINALIZAR PEDIDO</button>
+        <button class="add-to-cart" onclick="checkout()">FINALIZAR PEDIDO</button>
     </div>
 </div>
 
-<script src="js/ecommerce.js"></script>
+<script src="js/shop.js"></script>
 </body>
 </html>
