--- a/projeto/erp/crud.html
+++ b/projeto/erp/crud.html
@@ -221,6 +221,8 @@ function resetForm() {
     document.getElementById('btn-cancel').style.display = "none";
 }
 </script>
-
+<script src="js/conexao.js"></script>
+<script src="js/navbar.js"></script>
+    
 </body>
 </html>
