--- a/index.html
+++ b/index.html
@@ -92,21 +92,52 @@
         <h1>Meus Projetos</h1>
         <p>Bem-vindo ao hub do Aristides</p>
     </header>
-<!-- ################################################################################# -->
+    <!-- ################################################################################# -->
     <div class="project-grid">
-        <a href="projeto/bloco_de_notas/index.html" class="card">
+        <a href="projeto/portifolio/index.html" class="card">
             <i>📝</i>
-            <h2>Bloco de Notas</h2>
-            <p>Aplicação full-stack com autenticação e banco de dados via Supabase.</p>
+            <h2>Portifoli</h2>
+            <p>Site para portifólio</p>
             <span class="btn">Acessar App</span>
         </a>
     </div>
 <!-- ################################################################################# -->
 <!-- ################################################################################# -->
     <div class="project-grid">
+        <a href="projeto/tapioca/index.html" class="card">
+            <i>📝</i>
+            <h2>Cardapio Eletrônico</h2>
+            <p>Aplicação full-stack para lanchonete</p>
+            <span class="btn">Acessar App</span>
+        </a>
+    </div>
+<!-- ################################################################################# -->
+ <!-- ################################################################################# -->
+    <div class="project-grid">
+        <a href="projeto/loja/index.html" class="card">
+            <i>📝</i>
+            <h2>e-commerce</h2>
+            <p>Aplicação full-stack para loja virtual</p>
+            <span class="btn">Acessar App</span>
+        </a>
+    </div>
+<!-- ################################################################################# -->
+  <!-- ################################################################################# -->
+    <div class="project-grid">
+        <a href="projeto/loja/index.html" class="card">
+            <i>📝</i>
+            <h2>e-commerce</h2>
+            <p>Aplicação full-stack para loja virtual</p>
+            <span class="btn">Acessar App</span>
+        </a>
+    </div>
+<!-- ################################################################################# -->
+ 
+<!-- ################################################################################# -->
+    <div class="project-grid">
         <a href="projeto/erp/index.html" class="card">
             <i>📝</i>
-            <h2>SISTEMA ERP ABP</h2>
+            <h2>SISTEMA ERP ABP (em desenvolvimento)</h2>
             <p>Aplicação full-stack com autenticação e banco de dados via Supabase.</p>
             <span class="btn">Acessar App</span>
         </a>
