--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h1>Meus Projetos</h1>
         <p>Bem-vindo ao hub do Aristides</p>
     </header>
-    <!-- ################################################################################# -->
+<!-- ################################################################################# -->
     <div class="project-grid">
         <a href="projeto/portifolio/index.html" class="card">
             <i>📝</i>
@@ -112,7 +112,7 @@
         </a>
     </div>
 <!-- ################################################################################# -->
- <!-- ################################################################################# -->
+<!-- ################################################################################# -->
     <div class="project-grid">
         <a href="projeto/loja/index.html" class="card">
             <i>📝</i>
@@ -122,17 +122,6 @@
         </a>
     </div>
 <!-- ################################################################################# -->
-  <!-- ################################################################################# -->
-    <div class="project-grid">
-        <a href="projeto/loja/index.html" class="card">
-            <i>📝</i>
-            <h2>e-commerce</h2>
-            <p>Aplicação full-stack para loja virtual</p>
-            <span class="btn">Acessar App</span>
-        </a>
-    </div>
-<!-- ################################################################################# -->
- 
 <!-- ################################################################################# -->
     <div class="project-grid">
         <a href="projeto/erp/index.html" class="card">
@@ -143,6 +132,23 @@
         </a>
     </div>
 <!-- ################################################################################# -->
-    
+<!-- ################################################################################# -->
+    <div class="project-grid">
+        <a href="projeto/editortxt" class="card">
+            <i>📝</i>
+            <h2>editortxt</h2>
+            <span class="btn">Acessar App</span>
+        </a>
+    </div>
+<!-- ################################################################################# --> 
+    <!-- ################################################################################# -->
+    <div class="project-grid">
+        <a href="projeto/loja" class="card">
+            <i>📝</i>
+            <h2>editortxt</h2>
+            <span class="btn">Acessar App</span>
+        </a>
+    </div>
+<!-- ################################################################################# --> 
 </body>
 </html>
