--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio - Aristides</title>
+    <title> Aristidesbp- Projetos</title>
     <style>
         :root {
             --bg: #0f172a;
@@ -94,7 +94,7 @@
     </header>
 <!-- ################################################################################# -->
     <div class="project-grid">
-        <a href="projeto/portifolio/index.html" class="card">
+        <a href="projeto/meu_portfolio" class="card">
             <i>📝</i>
             <h2>Portifoli</h2>
             <p>Site para portifólio</p>
