--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <a href="projeto/tapioca/index.html" class="card">
             <i>📝</i>
             <h2>Cardapio Eletrônico</h2>
-            <p>Aplicação full-stack para lanchonete</p>
+            <p>Barraca de tapioca</p>
             <span class="btn">Acessar App</span>
         </a>
     </div>
@@ -126,8 +126,8 @@
     <div class="project-grid">
         <a href="projeto/erp/index.html" class="card">
             <i>📝</i>
-            <h2>SISTEMA ERP ABP (em desenvolvimento)</h2>
-            <p>Aplicação full-stack com autenticação e banco de dados via Supabase.</p>
+            <h2>SISTEMA ERP ABP</h2>
+            <p>Aplicação full-stack com autenticação e banco de dados via Supabase.(em desenvolvimento)</p>
             <span class="btn">Acessar App</span>
         </a>
     </div>
@@ -141,12 +141,21 @@
         </a>
     </div>
 <!-- ################################################################################# --> 
-    <!-- ################################################################################# -->
+<!-- ################################################################################# -->
     <div class="project-grid">
-        <a href="projeto/loja" class="card">
+        <a href="projeto/anaminesia" class="card">
             <i>📝</i>
-            <h2>editortxt</h2>
+            <h2>fixa-anaminesia</h2>
             <span class="btn">Acessar App</span>
+        </a>
+    </div>
+<!-- ################################################################################# --> 
+<!-- ################################################################################# -->
+    <div class="project-grid">
+        <a href="projeto/entregas" class="card">
+            <i>📝</i>
+            <h2>controle de entregas</h2>
+            <span class="btn">Em produção</span>
         </a>
     </div>
 <!-- ################################################################################# --> 
