--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -7,7 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
+    <script src="js/conexo_navebar.js" defer></script>
+    
    <style>
    /* SEU CSS ORIGINAL MANTIDO */
 * {
