--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEMA ERP ABP - Inicio</title>
     
-    <script src="js/conexo_navebar.js" defer></script>
+    <script src="js/conexao_navebar.js" defer></script>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://css/index.css">
