--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -62,6 +62,11 @@
                 <p>Crotrole-caixas</p>
             </a>
 
+         <a href="listar_tabelas.html" class="card">
+                <i class="fas fa-users"></i>
+                <h3>Listar_tabelas</h3>
+            
+            </a>
          
 <!-- ################################################################ -->
 <!-- ################################################################ -->
