--- a/projeto/erp/listar_tabelas.html
+++ b/projeto/erp/listar_tabelas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERP ABP - Gerenciar Tabelas</title>
     
-    <script src="js/conexao_navbar.js"></script>
+    <script src="js/conexao.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/index.css">
 
